@@ -3,16 +3,18 @@ package com.teambind.coupon.adapter.in.web;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.teambind.coupon.adapter.in.web.dto.CouponQueryRequest;
 import com.teambind.coupon.adapter.in.web.dto.CouponQueryResponse;
-import com.teambind.coupon.application.port.in.QueryUserCouponsUseCase;
+import com.teambind.coupon.application.service.CouponQueryService;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
-import org.springframework.boot.test.mock.mockito.MockBean;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
+import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
+import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 
 import java.util.Arrays;
 import java.util.List;
@@ -27,39 +29,58 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 
 /**
  * CouponQueryController 단위 테스트
+ * MockitoExtension을 사용한 순수 단위 테스트
  */
-@WebMvcTest(CouponQueryController.class)
+@ExtendWith(MockitoExtension.class)
 @DisplayName("CouponQueryController 테스트")
 class CouponQueryControllerTest {
 
-    @Autowired
     private MockMvc mockMvc;
-
-    @Autowired
     private ObjectMapper objectMapper;
 
-    @MockBean
-    private QueryUserCouponsUseCase queryUserCouponsUseCase;
+    @Mock
+    private CouponQueryService couponQueryService;
+
+    @InjectMocks
+    private CouponQueryController couponQueryController;
 
     private Long userId;
     private CouponQueryResponse mockResponse;
 
     @BeforeEach
     void setUp() {
+        // MockMvc 설정
+        mockMvc = MockMvcBuilders.standaloneSetup(couponQueryController).build();
+        objectMapper = new ObjectMapper();
+
         userId = 100L;
+
+        // Mock 응답 데이터 생성
+        CouponQueryResponse.CouponItem item1 = CouponQueryResponse.CouponItem.builder()
+                .couponIssueId(1L)
+                .userId(userId)
+                .couponName("10% 할인 쿠폰")
+                .status("ISSUED")
+                .discountType("PERCENTAGE")
+                .isAvailable(true)
+                .remainingDays(30L)
+                .build();
+
+        CouponQueryResponse.CouponItem item2 = CouponQueryResponse.CouponItem.builder()
+                .couponIssueId(2L)
+                .userId(userId)
+                .couponName("5000원 할인 쿠폰")
+                .status("ISSUED")
+                .discountType("FIXED")
+                .isAvailable(true)
+                .remainingDays(15L)
+                .build();
+
         mockResponse = CouponQueryResponse.builder()
-                .data(List.of(
-                        CouponQueryResponse.CouponItem.builder()
-                                .couponIssueId(1L)
-                                .userId(userId)
-                                .couponName("테스트 쿠폰")
-                                .status("ISSUED")
-                                .isAvailable(true)
-                                .build()
-                ))
-                .nextCursor(1L)
+                .data(Arrays.asList(item1, item2))
+                .nextCursor(2L)
                 .hasNext(true)
-                .count(1)
+                .count(2)
                 .build();
     }
 
@@ -71,7 +92,7 @@ class CouponQueryControllerTest {
         @DisplayName("파라미터 없이 조회 성공")
         void queryWithoutParameters() throws Exception {
             // given
-            when(queryUserCouponsUseCase.queryUserCoupons(eq(userId), any()))
+            when(couponQueryService.queryUserCoupons(eq(userId), any(CouponQueryRequest.class)))
                     .thenReturn(mockResponse);
 
             // when & then
@@ -80,15 +101,16 @@ class CouponQueryControllerTest {
                     .andExpect(status().isOk())
                     .andExpect(jsonPath("$.data").isArray())
                     .andExpect(jsonPath("$.data[0].couponIssueId").value(1))
-                    .andExpect(jsonPath("$.nextCursor").value(1))
-                    .andExpect(jsonPath("$.hasNext").value(true));
+                    .andExpect(jsonPath("$.nextCursor").value(2))
+                    .andExpect(jsonPath("$.hasNext").value(true))
+                    .andExpect(jsonPath("$.count").value(2));
         }
 
         @Test
         @DisplayName("상태 필터와 함께 조회")
         void queryWithStatusFilter() throws Exception {
             // given
-            when(queryUserCouponsUseCase.queryUserCoupons(eq(userId), any()))
+            when(couponQueryService.queryUserCoupons(eq(userId), any(CouponQueryRequest.class)))
                     .thenReturn(mockResponse);
 
             // when & then
@@ -96,14 +118,15 @@ class CouponQueryControllerTest {
                             .param("status", "AVAILABLE"))
                     .andDo(print())
                     .andExpect(status().isOk())
-                    .andExpect(jsonPath("$.data").exists());
+                    .andExpect(jsonPath("$.data").isArray())
+                    .andExpect(jsonPath("$.data[0].status").value("ISSUED"));
         }
 
         @Test
         @DisplayName("상품ID 필터와 함께 조회")
         void queryWithProductIds() throws Exception {
             // given
-            when(queryUserCouponsUseCase.queryUserCoupons(eq(userId), any()))
+            when(couponQueryService.queryUserCoupons(eq(userId), any(CouponQueryRequest.class)))
                     .thenReturn(mockResponse);
 
             // when & then
@@ -118,7 +141,7 @@ class CouponQueryControllerTest {
         @DisplayName("커서와 limit 파라미터로 조회")
         void queryWithCursorAndLimit() throws Exception {
             // given
-            when(queryUserCouponsUseCase.queryUserCoupons(eq(userId), any()))
+            when(couponQueryService.queryUserCoupons(eq(userId), any(CouponQueryRequest.class)))
                     .thenReturn(mockResponse);
 
             // when & then
@@ -127,25 +150,27 @@ class CouponQueryControllerTest {
                             .param("limit", "20"))
                     .andDo(print())
                     .andExpect(status().isOk())
-                    .andExpect(jsonPath("$.nextCursor").exists())
-                    .andExpect(jsonPath("$.hasNext").exists());
+                    .andExpect(jsonPath("$.nextCursor").value(2))
+                    .andExpect(jsonPath("$.hasNext").value(true));
         }
 
         @Test
         @DisplayName("모든 파라미터와 함께 조회")
         void queryWithAllParameters() throws Exception {
             // given
-            when(queryUserCouponsUseCase.queryUserCoupons(eq(userId), any()))
+            when(couponQueryService.queryUserCoupons(eq(userId), any(CouponQueryRequest.class)))
                     .thenReturn(mockResponse);
 
             // when & then
             mockMvc.perform(get("/api/coupons/users/{userId}", userId)
-                            .param("status", "UNUSED")
+                            .param("status", "AVAILABLE")
                             .param("productIds", "10,20,30")
                             .param("cursor", "100")
                             .param("limit", "50"))
                     .andDo(print())
-                    .andExpect(status().isOk());
+                    .andExpect(status().isOk())
+                    .andExpect(jsonPath("$.data").isArray())
+                    .andExpect(jsonPath("$.count").value(2));
         }
     }
 
@@ -157,29 +182,31 @@ class CouponQueryControllerTest {
         @DisplayName("만료 임박 쿠폰 조회 - 기본값")
         void queryExpiringDefault() throws Exception {
             // given
-            when(queryUserCouponsUseCase.queryExpiringCoupons(userId, 7, 10))
+            when(couponQueryService.queryExpiringCoupons(userId, 7, 10))
                     .thenReturn(mockResponse);
 
             // when & then
             mockMvc.perform(get("/api/coupons/users/{userId}/expiring", userId))
                     .andDo(print())
                     .andExpect(status().isOk())
-                    .andExpect(jsonPath("$.data").isArray());
+                    .andExpect(jsonPath("$.data").isArray())
+                    .andExpect(jsonPath("$.data[0].remainingDays").exists());
         }
 
         @Test
         @DisplayName("만료 임박 쿠폰 조회 - 커스텀 파라미터")
-        void queryExpiringWithParameters() throws Exception {
+        void queryExpiringWithParams() throws Exception {
             // given
-            when(queryUserCouponsUseCase.queryExpiringCoupons(userId, 3, 5))
+            when(couponQueryService.queryExpiringCoupons(userId, 3, 20))
                     .thenReturn(mockResponse);
 
             // when & then
             mockMvc.perform(get("/api/coupons/users/{userId}/expiring", userId)
                             .param("days", "3")
-                            .param("limit", "5"))
+                            .param("limit", "20"))
                     .andDo(print())
-                    .andExpect(status().isOk());
+                    .andExpect(status().isOk())
+                    .andExpect(jsonPath("$.data").isArray());
         }
     }
 
@@ -189,18 +216,16 @@ class CouponQueryControllerTest {
 
         @Test
         @DisplayName("쿠폰 통계 조회 성공")
-        void getStatisticsSuccess() throws Exception {
+        void getCouponStatisticsSuccess() throws Exception {
             // given
-            QueryUserCouponsUseCase.CouponStatistics statistics =
-                    QueryUserCouponsUseCase.CouponStatistics.builder()
-                            .totalCoupons(100L)
-                            .availableCoupons(30L)
-                            .usedCoupons(50L)
-                            .expiredCoupons(20L)
-                            .expiringCoupons(5L)
-                            .build();
-
-            when(queryUserCouponsUseCase.getCouponStatistics(userId))
+            var statistics = com.teambind.coupon.application.port.in.QueryUserCouponsUseCase.CouponStatistics.builder()
+                    .totalCoupons(100L)
+                    .availableCoupons(30L)
+                    .usedCoupons(50L)
+                    .expiredCoupons(20L)
+                    .expiringCoupons(5L)
+                    .build();
+            when(couponQueryService.getCouponStatistics(userId))
                     .thenReturn(statistics);
 
             // when & then
@@ -217,11 +242,11 @@ class CouponQueryControllerTest {
 
     @Nested
     @DisplayName("POST /api/coupons/users/{userId}/query")
-    class QueryUserCouponsWithBody {
+    class QueryUserCouponsPost {
 
         @Test
         @DisplayName("POST 방식으로 복잡한 필터 조회")
-        void queryWithRequestBody() throws Exception {
+        void queryWithComplexFilters() throws Exception {
             // given
             CouponQueryRequest request = CouponQueryRequest.builder()
                     .status(CouponQueryRequest.CouponStatusFilter.AVAILABLE)
@@ -230,7 +255,7 @@ class CouponQueryControllerTest {
                     .limit(20)
                     .build();
 
-            when(queryUserCouponsUseCase.queryUserCoupons(eq(userId), any()))
+            when(couponQueryService.queryUserCoupons(eq(userId), any(CouponQueryRequest.class)))
                     .thenReturn(mockResponse);
 
             // when & then
@@ -240,23 +265,19 @@ class CouponQueryControllerTest {
                     .andDo(print())
                     .andExpect(status().isOk())
                     .andExpect(jsonPath("$.data").isArray())
-                    .andExpect(jsonPath("$.count").value(1));
+                    .andExpect(jsonPath("$.data[0].couponName").exists());
         }
 
         @Test
         @DisplayName("잘못된 요청 데이터로 실패")
         void queryWithInvalidRequest() throws Exception {
             // given
-            String invalidRequest = """
-                    {
-                        "limit": 200
-                    }
-                    """;
+            String invalidJson = "{\"limit\": -1}";  // 잘못된 limit 값
 
             // when & then
             mockMvc.perform(post("/api/coupons/users/{userId}/query", userId)
                             .contentType(MediaType.APPLICATION_JSON)
-                            .content(invalidRequest))
+                            .content(invalidJson))
                     .andDo(print())
                     .andExpect(status().isBadRequest());
         }
